[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhdlio"
version = "0.1.0"
description = "HDL input and output library"
authors = [
    {name = "PyHDLio Contributors"}
]
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "flake8>=3.8",
    "mypy>=0.910",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyhdlio*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["antlr4.*"]
ignore_missing_imports = true
